json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail42.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail42.json
---
Err(
    ExpectedTokenError {
        expected: [
            String,
        ],
        actual: Illegal,
        origin: "\u{19}",
        row: 1,
        column: 3,
    },
)
