json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail43.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail43.json
---
Err(
    ExpectedTokenError {
        expected: [
            String,
            Number,
            True,
            False,
            Null,
            LBrace,
            LBracket,
        ],
        actual: Illegal,
        origin: "-",
        row: 1,
        column: 2,
    },
)
