json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail44.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail44.json
---
Err(
    ExpectedTokenError {
        expected: [
            String,
            Number,
            True,
            False,
            Null,
            LBrace,
            LBracket,
        ],
        actual: Illegal,
        origin: "-2.",
        row: 1,
        column: 5,
    },
)
