json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail47.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail47.json
---
Err(
    ExpectedTokenError {
        expected: [
            String,
            Number,
            True,
            False,
            Null,
            LBrace,
            LBracket,
        ],
        actual: Illegal,
        origin: "2.e-3",
        row: 1,
        column: 7,
    },
)
