json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@fail__fail50.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail50.json
---
Err(
    ExpectedTokenError {
        expected: [
            String,
            Number,
            True,
            False,
            Null,
            LBrace,
            LBracket,
        ],
        actual: Illegal,
        origin: "1.",
        invalid_row: 1,
        invalid_col: 2,
    },
)
